<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmacionDato"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="@dimen/tsize"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_margin="@dimen/mtitulo"/>

    <TextView
        android:id="@+id/tvNombreConfirmacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/ejmnombre"
        android:gravity="left"
        android:paddingLeft="@dimen/mnombre"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
        android:padding="@dimen/margin5">
    <TextView
        android:layout_width="@dimen/tfnac"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/tfnac"
        android:gravity="center_horizontal"/>
    <TextView
        android:id="@+id/tvFnacConfirmacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ejmfnac"
        android:gravity="left"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin5">
        <TextView
            android:layout_width="@dimen/ttelefono"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/ttelefono"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvTelefonoConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejmtelefono"
            android:gravity="left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin5">
        <TextView
            android:layout_width="@dimen/temail"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/temail"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvEmailConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejmemail"
            android:gravity="left"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin5">
        <TextView
            android:layout_width="@dimen/tdescripcion"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/tdescripcion"
            android:gravity="center_horizontal"/>
        <TextView
            android:id="@+id/tvDescripcionConfirmacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejmdescripcion"
            android:gravity="left"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditarDato"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/meditarDato"
        android:text="@string/editarDato" />
</LinearLayout>